--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
       <h1>Hi, I'm Jeff</h1>
       <h3>Welcome to my online lounge.</h3>
       <img src="jeff-schlarb.jpg">
-      <p>If you are the real Jeff Shlarb, we love your name and we apologize for making a website about you. Also we're
+      <p>If you are the real Jeff Schlarb, we love your name and we apologize for making a website about you. Also we're
         sorry for spelling your name incorrectly in the domain name.</p>
     </div>
   </body>
